--- a/src/checkoutItem.css
+++ b/src/checkoutItem.css
@@ -3,11 +3,11 @@
   padding: 20px;
   /* border: 2px solid red; */
   gap: 30px;
-  align-items:flex-start;
+  align-items: flex-start;
   width: 100%;
 }
 
-.item_img{
+.item_img {
   flex: 0.2;
   min-height: 100px;
   min-width: 100px;
@@ -16,10 +16,9 @@
   flex-shrink: 1 0 auto;
   /* border: 2px solid red; */
   background-color: rgba(240, 248, 255, 0.8);
-  
 }
 
-.item_img > img{
+.item_img > img {
   height: 150px;
   width: 100%;
   object-fit: contain;
@@ -27,20 +26,25 @@
 }
 
 .item_info {
-    flex: 0.8;
-    display: flex;
-    flex-direction: column;
-    line-height: 1.5;
-    font-size: 0.9rem;
-    gap: 5px;
-    /* border: 2px solid green; */
-    
+  flex: 0.8;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.5;
+  font-size: 0.9rem;
+  gap: 5px;
+  /* border: 2px solid green; */
 }
-.item_info> button {
-    padding: 2px;
-    border-radius: 5px;
-    margin-top: 30px;
-    width: fit-content;
+.item_info > button {
+  padding: 2px;
+  border-radius: 5px;
+  margin-top: 30px;
+  width: fit-content;
 }
 
-
+.product_qty_component {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f6;
+  height: 20px;
+}
